[Multi-stage] Fix literal handling (#13344)