@@ -20,12 +20,10 @@ package org.apache.pinot.query.planner.logical;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.BoundType;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.GregorianCalendar;
-import java.util.Iterator;
+import java.util.Calendar;
 import java.util.List;
 import java.util.Set;
 import org.apache.calcite.avatica.util.ByteString;
@@ -37,6 +35,7 @@ import org.apache.calcite.rex.RexLiteral;
 import org.apache.calcite.rex.RexNode;
 import org.apache.calcite.sql.SqlKind;
 import org.apache.calcite.sql.SqlOperator;
+import org.apache.calcite.sql.type.SqlTypeName;
 import org.apache.calcite.util.NlsString;
 import org.apache.calcite.util.Sarg;
 import org.apache.pinot.common.utils.DataSchema.ColumnDataType;
@@ -45,6 +44,7 @@ import org.apache.pinot.spi.utils.ByteArray;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 
+@SuppressWarnings({"rawtypes", "unchecked"})
 public class RexExpressionUtils {
   private RexExpressionUtils() {
   }
@@ -74,35 +74,53 @@ public class RexExpressionUtils {
   }
 
   public static RexExpression.Literal fromRexLiteral(RexLiteral rexLiteral) {
+    // TODO: Handle SYMBOL in the planning phase.
+    if (rexLiteral.getTypeName() == SqlTypeName.SYMBOL) {
+      Comparable value = rexLiteral.getValue();
+      assert value instanceof Enum;
+      return new RexExpression.Literal(ColumnDataType.STRING, value.toString());
+    }
     ColumnDataType dataType = RelToPlanNodeConverter.convertToColumnDataType(rexLiteral.getType());
-    return new RexExpression.Literal(dataType, convertValue(dataType, rexLiteral.getValue()));
+    if (rexLiteral.isNull()) {
+      return new RexExpression.Literal(dataType, null);
+    } else {
+      return fromRexLiteralValue(dataType, rexLiteral.getValue());
+    }
   }
 
-  @Nullable
-  private static Object convertValue(ColumnDataType dataType, @Nullable Comparable<?> value) {
-    if (value == null) {
-      return null;
-    }
+  private static RexExpression.Literal fromRexLiteralValue(ColumnDataType dataType, Comparable value) {
+    // Convert the value to the internal representation of the data type.
     switch (dataType) {
       case INT:
-        return ((BigDecimal) value).intValue();
+        value = ((BigDecimal) value).intValue();
+        break;
       case LONG:
-        return ((BigDecimal) value).longValue();
+        value = ((BigDecimal) value).longValue();
+        break;
       case FLOAT:
-        return ((BigDecimal) value).floatValue();
+        value = ((BigDecimal) value).floatValue();
+        break;
       case DOUBLE:
-        return ((BigDecimal) value).doubleValue();
+        value = ((BigDecimal) value).doubleValue();
+        break;
+      case BIG_DECIMAL:
+        break;
       case BOOLEAN:
-        return ((Boolean) value) ? 1 : 0;
+        value = Boolean.TRUE.equals(value) ? BooleanUtils.INTERNAL_TRUE : BooleanUtils.INTERNAL_FALSE;
+        break;
       case TIMESTAMP:
-        return ((GregorianCalendar) value).getTimeInMillis();
+        value = ((Calendar) value).getTimeInMillis();
+        break;
       case STRING:
-        return ((NlsString) value).getValue();
+        value = ((NlsString) value).getValue();
+        break;
       case BYTES:
-        return new ByteArray(((ByteString) value).getBytes());
+        value = new ByteArray(((ByteString) value).getBytes());
+        break;
       default:
-        return value;
+        throw new IllegalStateException("Unsupported ColumnDataType: " + dataType);
     }
+    return new RexExpression.Literal(dataType, value);
   }
 
   public static RexExpression fromRexCall(RexCall rexCall) {
@@ -156,6 +174,7 @@ public class RexExpressionUtils {
     RexLiteral rexLiteral = (RexLiteral) rexCall.operands.get(1);
     ColumnDataType dataType = RelToPlanNodeConverter.convertToColumnDataType(rexLiteral.getType());
     Sarg sarg = rexLiteral.getValueAs(Sarg.class);
+    assert sarg != null;
     if (sarg.isPoints()) {
       return new RexExpression.FunctionCall(dataType, SqlKind.IN.name(),
           toFunctionOperands(rexInputRef, sarg.rangeSet.asRanges(), dataType));
@@ -163,78 +182,65 @@ public class RexExpressionUtils {
       return new RexExpression.FunctionCall(dataType, SqlKind.NOT_IN.name(),
           toFunctionOperands(rexInputRef, sarg.rangeSet.complement().asRanges(), dataType));
     } else {
-      Set<Range<?>> ranges = sarg.rangeSet.asRanges();
+      Set<Range> ranges = sarg.rangeSet.asRanges();
       return convertRangesToOr(dataType, rexInputRef, ranges);
     }
   }
 
-  private static RexExpression convertRangesToOr(ColumnDataType dataType, RexInputRef rexInputRef,
-      Set<Range<?>> ranges) {
-    RexExpression result;
-    Iterator<Range<?>> it = ranges.iterator();
-    if (!it.hasNext()) { // no disjunctions means false
-      return new RexExpression.Literal(ColumnDataType.BOOLEAN, 0);
+  private static RexExpression convertRangesToOr(ColumnDataType dataType, RexInputRef rexInputRef, Set<Range> ranges) {
+    int numRanges = ranges.size();
+    if (numRanges == 0) {
+      return RexExpression.Literal.FALSE;
     }
     RexExpression.InputRef rexInput = fromRexInputRef(rexInputRef);
-    result = convertRange(rexInput, dataType, it.next());
-    if (result instanceof RexExpression.Literal) {
-      Object value = ((RexExpression.Literal) result).getValue();
-      if (BooleanUtils.isTrueInternalValue(value)) { // one of the disjunctions is true => return true
-        return result;
+    List<RexExpression> operands = new ArrayList<>(numRanges);
+    for (Range range : ranges) {
+      RexExpression operand = convertRange(rexInput, dataType, range);
+      if (operand == RexExpression.Literal.TRUE) {
+        return operand;
+      }
+      if (operand != RexExpression.Literal.FALSE) {
+        operands.add(operand);
       }
     }
-    while (it.hasNext()) {
-      Range<?> range = it.next();
-      RexExpression newExp = convertRange(rexInput, dataType, range);
-      if (newExp instanceof RexExpression.Literal) {
-        Object value = ((RexExpression.Literal) newExp).getValue();
-        if (BooleanUtils.isTrueInternalValue(value)) { // one of the disjunctions is true => return true
-          return newExp;
-        } else {
-          continue; // one of the disjunctions is false => ignore it
-        }
-      }
-      ImmutableList<RexExpression> operands = ImmutableList.of(result, newExp);
-      result = new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, SqlKind.OR.name(), operands);
+    int numOperands = operands.size();
+    if (numOperands == 0) {
+      return RexExpression.Literal.FALSE;
+    } else if (numOperands == 1) {
+      return operands.get(0);
+    } else {
+      return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, SqlKind.OR.name(), operands);
     }
-    return result;
   }
 
-  private static RexExpression convertRange(RexExpression.InputRef rexInput, ColumnDataType dataType, Range<?> range) {
+  private static RexExpression convertRange(RexExpression.InputRef rexInput, ColumnDataType dataType, Range range) {
     if (range.isEmpty()) {
-      return new RexExpression.Literal(ColumnDataType.BOOLEAN, 0);
+      return RexExpression.Literal.FALSE;
     }
     if (!range.hasLowerBound()) {
-      if (!range.hasUpperBound()) {
-        return new RexExpression.Literal(ColumnDataType.BOOLEAN, 1);
-      }
-      return convertUpperBound(rexInput, dataType, range.upperBoundType(), range.upperEndpoint());
-    } else if (!range.hasUpperBound()) {
-      return convertLowerBound(rexInput, dataType, range.lowerBoundType(), range.lowerEndpoint());
-    } else {
-      RexExpression lowerConstraint =
-          convertLowerBound(rexInput, dataType, range.lowerBoundType(), range.lowerEndpoint());
-      RexExpression upperConstraint =
-          convertUpperBound(rexInput, dataType, range.upperBoundType(), range.upperEndpoint());
-      ImmutableList<RexExpression> operands = ImmutableList.of(lowerConstraint, upperConstraint);
-      return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, SqlKind.AND.name(), operands);
+      return !range.hasUpperBound() ? RexExpression.Literal.TRUE : convertUpperBound(rexInput, dataType, range);
     }
+    if (!range.hasUpperBound()) {
+      return convertLowerBound(rexInput, dataType, range);
+    }
+    return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, SqlKind.AND.name(),
+        List.of(convertLowerBound(rexInput, dataType, range), convertUpperBound(rexInput, dataType, range)));
   }
 
   private static RexExpression convertLowerBound(RexExpression.InputRef inputRef, ColumnDataType dataType,
-      BoundType boundType, Comparable<?> endpoint) {
-    SqlKind sqlKind = boundType == BoundType.OPEN ? SqlKind.GREATER_THAN : SqlKind.GREATER_THAN_OR_EQUAL;
-    RexExpression.Literal literal = new RexExpression.Literal(dataType, convertValue(dataType, endpoint));
-    ImmutableList<RexExpression> operands = ImmutableList.of(inputRef, literal);
-    return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, sqlKind.name(), operands);
+      Range range) {
+    assert range.hasLowerBound();
+    SqlKind sqlKind = range.lowerBoundType() == BoundType.OPEN ? SqlKind.GREATER_THAN : SqlKind.GREATER_THAN_OR_EQUAL;
+    return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, sqlKind.name(),
+        List.of(inputRef, fromRexLiteralValue(dataType, range.lowerEndpoint())));
   }
 
   private static RexExpression convertUpperBound(RexExpression.InputRef inputRef, ColumnDataType dataType,
-      BoundType boundType, Comparable<?> endpoint) {
-    SqlKind sqlKind = boundType == BoundType.OPEN ? SqlKind.LESS_THAN : SqlKind.LESS_THAN_OR_EQUAL;
-    RexExpression.Literal literal = new RexExpression.Literal(dataType, convertValue(dataType, endpoint));
-    ImmutableList<RexExpression> operands = ImmutableList.of(inputRef, literal);
-    return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, sqlKind.name(), operands);
+      Range range) {
+    assert range.hasUpperBound();
+    SqlKind sqlKind = range.upperBoundType() == BoundType.OPEN ? SqlKind.LESS_THAN : SqlKind.LESS_THAN_OR_EQUAL;
+    return new RexExpression.FunctionCall(ColumnDataType.BOOLEAN, sqlKind.name(),
+        List.of(inputRef, fromRexLiteralValue(dataType, range.upperEndpoint())));
   }
 
   /**
@@ -242,12 +248,12 @@ public class RexExpressionUtils {
    */
   private static List<RexExpression> toFunctionOperands(RexInputRef rexInputRef, Set<Range> ranges,
       ColumnDataType dataType) {
-    List<RexExpression> result = new ArrayList<>(ranges.size() + 1);
-    result.add(fromRexInputRef(rexInputRef));
+    List<RexExpression> operands = new ArrayList<>(1 + ranges.size());
+    operands.add(fromRexInputRef(rexInputRef));
     for (Range range : ranges) {
-      result.add(new RexExpression.Literal(dataType, convertValue(dataType, range.lowerEndpoint())));
+      operands.add(fromRexLiteralValue(dataType, range.lowerEndpoint()));
     }
-    return result;
+    return operands;
   }
 
   public static RexExpression.FunctionCall fromAggregateCall(AggregateCall aggregateCall) {
